--- a/src/raft/res/all.1
+++ b/src/raft/res/all.1
@@ -33,4 +33,4 @@ Test (2C): churn ...
 Test (2C): unreliable churn ...
   ... Passed
 PASS
-ok  	_/Users/johnsauhu/downloads/6.824-raft/src/raft	168.381s
+ok  	raft	153.226s
